[project]
name = "paged-cuda-kernel"
version = "0.1.0"
description = "Block-Gather CUDA Kernel for Paged KV Cache Access in LLM Decoding"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
